--- a/templates/grinder-association.html
+++ b/templates/grinder-association.html
@@ -387,6 +387,23 @@
                                                 Contract: <a href="https://etherscan.io/address/0xc7e9dDd5358e08417b1C88ed6f1a73149BEeaa32" target="_blank" rel="noopener noreferrer" class="text-primary" style="text-decoration: underline;">0xc7e9dDd5358e08417b1C88ed6f1a73149BEeaa32</a>
                                             </p>
                                         </div>
+                                        
+                                        <!-- Ethereum Announcement Image -->
+                                        <div class="panel mt-4 mb-4 text-center" data-anime="onview: -200; translateY: [24, 0]; opacity: [0, 1]; delay: 300;">
+                                            <div class="row justify-center">
+                                                <div class="col-12 col-md-6 col-lg-4" style="max-width: 400px; margin: 0 auto;">
+                                                    <div class="panel p-2 border border-2 border-black contrast-shadow-sm bg-white rotate-1">
+                                                        <h6 class="h6 mb-2 text-uppercase fw-bold fs-7">🐦 Original Announcement</h6>
+                                                        <a href="https://x.com/ethereum/status/715821110722433024" target="_blank" rel="noopener noreferrer">
+                                                            <img src="{{ url_for('static', filename='assets/images/ethereum_grinder_announcement.png') }}" alt="Ethereum Grinder Announcement" 
+                                                                 class="img-fluid border border-2 border-black contrast-shadow-sm" 
+                                                                 style="max-width: 100%; height: auto;">
+                                                        </a>
+                                                        <p class="fs-7 mt-2 mb-0"><a href="https://x.com/ethereum/status/715821110722433024" target="_blank" rel="noopener noreferrer" class="text-decoration-none" style="color: inherit;">Ethereum Twitter Announcement</a></p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
