--- a/templates/grinder-association.html
+++ b/templates/grinder-association.html
@@ -7,7 +7,25 @@
     <title>Unicorn Meat Grinder Association 🦄🍖</title>
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='assets/favicon.ico') }}" />
     <meta name="description" content="The Unicorn Meat Grinder Association DAO - Historic Ethereum DAO from 2016">
+    <meta name="keywords"
+        content="ethereum, dao, governance, quadratic voting, unicorn meat, grinder association, ethereum dao, historic dao">
     <meta name="theme-color" content="#FFBA00">
+    <!-- Open Graph Tags -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Unicorn Meat Grinder Association 🦄🍖">
+    <meta property="og:description" content="The Unicorn Meat Grinder Association DAO - Historic Ethereum DAO from 2016">
+    <meta property="og:url" content="https://unicornmeateth.com/grinder-association">
+    <meta property="og:site_name" content="Unicorn Meat 🍖">
+    <meta property="og:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
+    <meta property="og:image:width" content="1180">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:type" content="image/png">
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Unicorn Meat Grinder Association 🦄🍖">
+    <meta name="twitter:description" content="The Unicorn Meat Grinder Association DAO - Historic Ethereum DAO from 2016">
+    <meta name="twitter:image" content="https://gaccdiscordimages.s3.us-east-1.amazonaws.com/unicornmeat-ogsocial.png">
     <!-- app head for bootstrap core -->
     <script src="{{ url_for('static', filename='assets/js/app-head-bs.js') }}"></script>
     <!-- include uni-core components -->
